<resources>
    <string name="app_name">IMC</string>
    <string name="genero">Mulher</string>
    <string name="idade">Idade:</string>
    <string name="peso">Peso:</string>
    <string name="atividade">Atividade Física:</string>
    <string name="sedentario">Sedentário</string>
    <string name="moderado">Moderado</string>
    <string name="atleta">Atleta</string>
    <string name="calcular">Calcular</string>
    <string name="altura">Altura:</string>
</resources>
