<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

    <Switch
            android:text="@string/genero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" android:id="@+id/switch_mulher" android:layout_marginTop="0dp"
            android:layout_marginStart="0dp" android:checked="true"/>
    <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" android:id="@+id/sbIdade" android:layout_marginTop="55dp"
            android:layout_marginStart="0dp" android:max="100"/>
    <TextView
            android:text="@string/idade"
            android:layout_width="60dp"
            android:layout_height="wrap_content" android:layout_alignParentStart="true"
            android:layout_below="@+id/switch_mulher" android:id="@+id/txtIdade" android:layout_marginTop="2dp"
            android:layout_marginStart="10dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/txtIdade"
            android:layout_alignTop="@+id/txtIdade"
            android:id="@+id/txtSeekIdade" android:layout_marginTop="1dp"
            android:layout_marginStart="40dp"/>
    <TextView
            android:text="@string/peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentTop="true" android:id="@+id/txtPeso"
            android:layout_marginTop="89dp" android:layout_alignStart="@+id/txtIdade" android:layout_marginStart="0dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentStart="true"
            android:layout_marginStart="65dp" android:layout_alignTop="@+id/txtPeso" android:id="@+id/txtSeekPeso"
            android:layout_marginTop="0dp"/>
    <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_alignParentStart="true"
            android:layout_below="@+id/txtPeso" android:id="@+id/sbPeso" android:max="200"
            android:layout_marginTop="7dp" android:layout_marginStart="0dp"/>
    <TextView
            android:text="@string/atividade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" android:id="@+id/txtAtividade" android:layout_marginTop="172dp"
            android:layout_marginStart="0dp"/>
    <RadioGroup
            android:layout_width="365dp"
            android:layout_height="141dp" android:layout_alignParentTop="true" android:layout_marginTop="201dp"
            android:layout_alignStart="@+id/txtIdade" android:id="@+id/radioGroup">
        <RadioButton
                android:text="@string/sedentario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rbtn1" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/moderado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rbtn2" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/atleta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rbtn3" android:layout_weight="1"/>
    </RadioGroup>

    <Button
            android:text="@string/calcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" android:id="@+id/btnCalcular" android:layout_marginBottom="0dp"
            android:layout_alignEnd="" android:layout_marginEnd="100dp"
            android:layout_alignParentStart="true" android:layout_marginStart="47dp"/>
    <RatingBar
            android:layout_width="295dp"
            android:layout_height="wrap_content" android:layout_alignParentStart="true"
            android:layout_below="@+id/btnCalcular" android:id="@+id/rtbar" android:layout_marginTop="-159dp"
            android:numStars="5" android:rating="0" android:layout_alignParentEnd="true"
            android:layout_marginEnd="45dp"
            android:layout_marginStart="44dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/txtResultado"
            android:layout_marginBottom="48dp" android:visibility="visible"
            android:layout_marginStart="1dp" android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/btnCalcular" android:layout_marginTop="23dp"
            android:layout_below="@+id/rtbar" android:layout_alignParentEnd="true" android:layout_marginEnd="0dp"/>
    <TextView
            android:text="@string/altura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentStart="true"
            android:layout_below="@+id/sbPeso" android:id="@+id/txtAltura"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_below="@+id/sbPeso"
            android:id="@+id/txtseekAltura"
            android:layout_toEndOf="@+id/txtAltura" android:layout_marginStart="69dp"/>
    <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_alignParentStart="true"
            android:layout_above="@+id/txtAtividade" android:id="@+id/sbAltura" android:layout_marginBottom="-172dp"
            android:max="300"/>
</RelativeLayout>